# gql-fiddle

./: .dev.vars.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  flake.nix  lefthook.yml  wrangler.jsonc  wrangler.toml
.cargo/: config.toml
.claude/workflows/: ralph-backlog-loop.js
.github/workflows/: ci.yml  deploy.yml
.pi/agents/: developer.md  researcher.md  reviewer.md
.pi/prompts/: backlog-workflow-auto.md  backlog-workflow.md
backlog/: config.yml
backlog/docs/: doc-1 - GraphQL-Playground-Design.md  (+1 more)
crates/gql-core/: Cargo.toml
crates/gql-core/src/: api_schema.rs  compose.rs  dto.rs  lib.rs  mock.rs  node_at_pos.rs  plan.rs  query_shape.rs  validate.rs
crates/gql-core/tests/: cargo_toml_audit.rs  compose.rs  mock.rs  plan.rs  wasm.rs
crates/gql-core/tests/snapshots/: compose__duplicate_query_field_without_shareable.snap  compose__entity_key_field_type_mismatch.snap  compose__field_sharing_violation_with_invalid_override.snap  compose__invalid_federation_directive_on_query_root.snap  compose__reference_to_missing_type.snap  compose__three_subgraphs_users_posts_and_comments.snap  compose__two_subgraphs_independent_users_and_posts.snap  compose__two_subgraphs_sharing_entity_via_key.snap  plan__plan_multi_subgraph_with_flatten.snap  plan__plan_single_subgraph_fetch.snap
functions/: tsconfig.json
migrations/: 0001_initial.sql  0002_users_wrapped_dek.sql
scripts/: backlog-loop.sh
web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo  vite.config.ts  vitest.functions.config.ts
(+176 files in other folders)
